<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSaving"
    android:background="@color/gray"
    >

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/shape"
        android:gravity="center">

    </View>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_amount8"
        android:textColor="#ffffff"
        android:textSize="13sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginStart="16dp"
        android:text="@string/rs_12450_00"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView12"
        android:textAlignment="textEnd"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/DateV2"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_below="@+id/textView12"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:paddingBottom="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:elevation="5dp"
        >
        <TextView
            android:id="@+id/savingNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/saving_details"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"

            />
        <View
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="#d8d8d8"
            android:layout_below="@id/savingNameView"
           />

        <RelativeLayout
            android:id="@+id/saving01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:paddingBottom="5dp"

            >


            <TextView
                android:id="@+id/saving_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving_for_desk_setup"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:textStyle="bold"

                />

            <ProgressBar
                android:layout_below="@id/saving_text"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:minHeight="10dp"
                android:minWidth="200dp"
                android:progress="50"
                android:progressTint="@color/green"
                android:background="#F8F8F8"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                tools:targetApi="o" />
            <TextView
                android:id="@+id/current_amount_text"
                android:layout_below="@id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_34000_00"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_marginStart="28dp"
                />

            <TextView
                android:id="@+id/full_amount_text"
                android:layout_below="@id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/rs_45000_00"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="28dp"
                />

        </RelativeLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/saving01"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:justificationMode="inter_word"
            android:text="@string/DumyText"
            android:textSize="14sp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_text"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            android:text="@string/initial_amount"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount_text"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:text="@string/rs_2350_00"
            android:textSize="14sp"

            />
        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/account"
           android:paddingVertical="0dp"
            android:paddingHorizontal="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/card"
            android:backgroundTint="@color/blue"
            android:text="@string/add_transaction"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/blue"
            android:layout_below="@id/account"
            android:layout_toEndOf="@id/add_btn"
            android:src="@drawable/edit_btn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/IconV3"
            />

        <ImageButton

            android:id="@+id/delete_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/account"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/edit_btn"
            android:background="@drawable/circle"

            android:contentDescription="@string/IconV3"
            android:src="@drawable/delete_btn" />
    </RelativeLayout>

</RelativeLayout>