<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/cardViewAccount3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card"
        android:elevation="5dp"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/dateNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:elevation="5dp"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/date_hr"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_below="@id/dateNum"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_hr"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@string/inflow"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_hr"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:elevation="5dp"
            android:text="@string/AmountV4"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/outflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inflow"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:elevation="5dp"
            android:text="@string/AmountV5"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:elevation="5dp"
            android:text="@string/outflow"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>
</LinearLayout>