<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingBottom="6dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="12dp"

            android:contentDescription="@string/IconV3"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"

            android:layout_toEndOf="@id/icon"
            android:elevation="5dp"
            android:text="@string/title_savings"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@id/icon"
            android:elevation="5dp"
            android:paddingBottom="6dp"
            android:text="@string/main_category"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:elevation="5dp"
            android:text="@string/main_category"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>